--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -419,15 +419,22 @@
            </li>
 				<li class="box-num">  	
  <details><summary>Box 018 – Lump-sum payments <span class="label label-warning">In progress</span></summary>
-     <p id="bx018">Report the taxable portion of a <strong>single payment</strong> out of a pension fund or plan including any single payment resulting from a:</p>
+  
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>Single payments</dt>
+<dd> <p id="bx018">Report the taxable portion of a <strong>single payment</strong> out of a pension fund or plan including any single payment resulting from a:</p>
 <ul>
  <li>Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li>Termination of, amendment to, or modification of the plan</li>
 <li>Reimbursement of any over-contributions to the plan</li>
 </ul>
+<p>Report the taxable portion of any single payment out of a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 018.</p>
 
- <h4>Specific situations</h4>
-<dl class="dl-horizontal">
+<p>Report the taxable portion of a lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 018.</p>
+
+</dd>
+
 <dt>Non-resident services</dt>
 <dd><p>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
 
