--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -429,7 +429,7 @@
 <li>Termination of, amendment to, or modification of the plan</li>
 <li>Reimbursement of any over-contributions to the plan</li>
 </ul>
-<p>Report the taxable portion of any single payment out of a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 018.</p>
+<p class="mrgn-tp-md">Report the taxable portion of any single payment out of a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 018.</p>
 
 <p>Report the taxable portion of a lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 018.</p>
 
@@ -462,7 +462,7 @@
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
-<p><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
+<p class="mrgn-tp-md"><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
 
 <dt>Unregistered plan</dt>
