--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -418,7 +418,7 @@
                     </details>
            </li>
 				<li class="box-num">  	
- <details><summary>Box 018 – Lump-sum payments <span class="label label-warning">In progress</span></summary>
+ <details><summary>Box 018 – Lump-sum payments <span class="label label-warning">Jeremiah</span></summary>
   
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
