--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -863,13 +863,15 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 144 – Indian (exempt income) – Other income</summary> 
-  <p  id="cd144">Report all amounts that are exempt income for Indians and are not reported elsewhere on a T4A&nbsp;slip.</p> 
+ <details>  <summary>Code 144 – Indian (exempt income) – Other income <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd144">Report the tax-exempt income that are not reported elsewhere on the T4A slip you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
+
  </details> 
 </li>
 <li class="code-num">
  <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd146">Report the tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
+<p  id="cd146">Report the tax-exempt income from pension or superannuation you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount in box 016.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
@@ -878,7 +880,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd148">Report the tax-exempt lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
+<p  id="cd148">Report the tax-exempt income from a lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount in box 018.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
@@ -936,8 +938,9 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments</summary> 
-  <p id="cd195">Report the amount of Pooled registered pension plan (PRPP) payments that are exempt income for Indians.</p> 
+ <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd195">Report the tax-exempt income you paid from a pooled registered pension plan (<abbr title="Pool registered pension plan">PRPP</abbr>) to a recipient who is registered, or entitled to be registered under the Indian Act.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
  </li>
 <li class="code-num">
