--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -382,31 +382,29 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Unregistered pension plan</dt>
-<dd></dd>
-<dt>Employee benefit plan </dt>
-<dd></dd>
+<dd><p>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</p>
+<p>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</p>
+</dd>
+
+<dt><abbr title="Employee benefit plan">EBP</abbr></dt>
+<dd>If you made payments out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a>.</dd>
+
 <dt>Retirement compensation arrangement</dt>
-<dd></dd>
+<dd>Do not include amounts paid out of a <strong>retirement compensation arrangement</strong>. Use a <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip, Statement of Distributions from a Retirement Compensation Arrangement (RCA)</a> for these amounts</dd>
+
 <dt>Indian (exempt income)</dt>
 <dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
 </dd>
 
 <dt>Disability benefits</dt>
-<dd></dd>
+<dd>Include <strong>disability benefits paid as a life annuity</strong> out of a superannuation or RPP in box <strong>016</strong>. Include any <strong>other disability benefits</strong> paid out of superannuation or pension plan in the &quot;Other information&quot; area, using code 125</dd>
+
 <dt>Veterans' benefits</dt>
-<dd></dd>
+<dd>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128</dd>
 
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
-<ul>
-<li>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</li>
-<li>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</li>
-<li>Include <strong>disability benefits paid as a life annuity</strong> out of a superannuation or RPP in box <strong>016</strong>. Include any <strong>other disability benefits</strong> paid out of superannuation or pension plan in the &quot;Other information&quot; area, using code 125</li>
-<li>If you made payments out of an <strong>employee benefit plan (EBP)</strong> that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
-<li>Do not include amounts paid out of a <strong>retirement compensation arrangement</strong>. Use a <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip, Statement of Distributions from a Retirement Compensation Arrangement (RCA)</a> for these amounts</li>
-<li>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128 </li>
-</ul>
                 </details>
  </li>
 				<li class="box-num">  	
