--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -377,10 +377,12 @@
            </li>
 				<li class="box-num">  	
  <details><summary>Box 016 – Pension or superannuation <span class="label label-warning">In progress</span></summary>
-          <p id="bx016">Report the amount for the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
-
+        
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
+<dt>Registered pension plan</dt>
+<dd><p id="bx016">Report the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a <strong>superannuation or registered pension fund or plan</strong>.</p>
+</dd>
 <dt>Unregistered pension plan</dt>
 <dd><p>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</p>
 <p>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</p>
