--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -399,7 +399,8 @@
 </dd>
 
 <dt>Disability benefits</dt>
-<dd>Include <strong>disability benefits paid as a life annuity</strong> out of a superannuation or RPP in box <strong>016</strong>. Include any <strong>other disability benefits</strong> paid out of superannuation or pension plan in the &quot;Other information&quot; area, using code 125</dd>
+<dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
+<dd><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
 
 <dt>Veterans' benefits</dt>
 <dd>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128</dd>
@@ -783,9 +784,13 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan</summary> 
-  <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan. These payments do not require payroll deductions (<abbr title="Canada Pension Plan and/or Quebec Pension Plan">CPP/QPP</abbr>, <abbr title="employment insurance">EI</abbr>, <abbr title="Provincial parental insurance plan">PPIP</abbr>, and income tax).</p> 
- </details> 
+ <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan <span class="label label-warning">Jeremiah</span></summary> 
+ <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan.</p> 
+ 
+<p><strong>Do not</strong> report this amount using box 016.</p> 
+<p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
+
+</details> 
 </li>
 <li class="code-num">
  <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor</summary> 
@@ -873,7 +878,7 @@
  <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation <span class="label label-warning">Jeremiah</span></summary> 
 <p  id="cd146">Report the tax-exempt income from pension or superannuation you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
-<p><strong>Do not</strong> report this amount in box 016.</p> 
+<p><strong>Do not</strong> report this amount using box 016.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
 </li>
@@ -882,7 +887,7 @@
  <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments <span class="label label-warning">Jeremiah</span></summary> 
 <p  id="cd148">Report the tax-exempt income from a lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
-<p><strong>Do not</strong> report this amount in box 018.</p> 
+<p><strong>Do not</strong> report this amount using box 018.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
 </li>
