--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -400,7 +400,7 @@
 
 <dt>Disability benefits</dt>
 <dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
-<dd><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
+<p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
 
 <dt>Veterans' benefits</dt>
 <dd>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128</dd>
