--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -402,8 +402,8 @@
 <dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
 <p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
 
-<dt>Veterans' benefits</dt>
-<dd>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128</dd>
+<dt>Veterans' benefits eligible for pension splitting</dt>
+<dd>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</dd>
 
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
@@ -798,16 +798,16 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 127 – Veterans' benefits</summary> 
- <p  id="cd127">Report the sum of the following amounts: </p>
+ <details>  <summary>Code 127 – Veterans' benefits <span class="label label-warning">Jeremiah</span></summary> 
+ <p  id="cd127">Report the sum of the following amounts using code 127: </p>
 <ul><li>amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
 <li>amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
+<p><strong>Do not</strong> report this amount using box 016.</p> 
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting</summary> 
-  <p  id="cd128">Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act). </p>
-<p>Also, report this sum in box <strong>016</strong>.</p> 
+ <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd128">Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act) using code 128 <strong>and</strong> <a href="#bx016">box 016</a>. </p>
  </details>
 </li>
 <li class="code-num">
