--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -403,7 +403,8 @@
 <p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
 
 <dt>Veterans' benefits eligible for pension splitting</dt>
-<dd>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</dd>
+<dd><p>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</p>
+<p><strong>Do not</strong> report any <strong>other veterans' benefits</strong> you paid using box 016, use <a href="#cd127">code 127</a>.</p></dd>
 
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
