--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -597,7 +597,7 @@
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
-<p><strong>Do not</strong> report payments of fees for services using code 028, continue to <a href="#bx048">box 048</a>.</p>
+<p><strong>Do not</strong> report payments of fees for services using code 028, use <a href="#bx048">box 048</a>.</p>
 <h4>Situations where you may need to report amounts using code 028</h4>
 <ul>
 <li>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></li>
