--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -391,13 +391,6 @@
 <dt><abbr title="Employee benefit plan">EBP</abbr></dt>
 <dd>If you made payments out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a>.</dd>
 
-<dt>Retirement compensation arrangement</dt>
-<dd>Do not include amounts paid out of a <strong>retirement compensation arrangement</strong>. Use a <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip, Statement of Distributions from a Retirement Compensation Arrangement (RCA)</a> for these amounts</dd>
-
-<dt>Indian (exempt income)</dt>
-<dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
-</dd>
-
 <dt>Disability benefits</dt>
 <dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
 <p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
@@ -405,6 +398,14 @@
 <dt>Veterans' benefits eligible for pension splitting</dt>
 <dd><p>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</p>
 <p><strong>Do not</strong> report any <strong>other veterans' benefits</strong> you paid using box 016, use <a href="#cd127">code 127</a>.</p></dd>
+
+<dt>Indian (exempt income)</dt>
+<dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
+</dd>
+
+<dt><abbr title="Retirement compensation arrangement">RCA</abbr></dt>
+<dd><strong>Do not</strong> report amounts paid out of a retirement compensation arrangement (<abbr title="Retirement compensation arrangement">RCA</abbr>), use the <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip</a></dd>
+
 
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
