--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -388,9 +388,6 @@
 <p>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</p>
 </dd>
 
-<dt><abbr title="Employee benefit plan">EBP</abbr></dt>
-<dd>If you made payments out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a>.</dd>
-
 <dt>Disability benefits</dt>
 <dd><p>Report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using box 016.</p>
 <p><strong>Do not</strong> report any <strong>other disability benefits</strong> paid out of superannuation or pension plan using box 016, use <a href="#cd125">code 125</a>.</p></dd>
@@ -403,8 +400,11 @@
 <dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
 </dd>
 
+<dt><abbr title="Employee benefit plan">EBP</abbr></dt>
+<dd><strong>Do not</strong> report payments you made out of an employee benefit plan (<abbr title="Employee benefit plan">EBP</abbr>) that are not payments of superannuation or pension benefits, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</dd>
+
 <dt><abbr title="Retirement compensation arrangement">RCA</abbr></dt>
-<dd><strong>Do not</strong> report amounts paid out of a retirement compensation arrangement (<abbr title="Retirement compensation arrangement">RCA</abbr>), use the <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip</a></dd>
+<dd><strong>Do not</strong> report amounts paid out of a retirement compensation arrangement (<abbr title="Retirement compensation arrangement">RCA</abbr>), use the <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip</a>.</dd>
 
 
 </dl>
