--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -381,11 +381,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Registered pension plan</dt>
-<dd><p id="bx016">Report the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a <strong>superannuation or registered pension fund or plan</strong>.</p>
-</dd>
-<dt>Unregistered pension plan</dt>
-<dd><p>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</p>
-<p>Do not include benefits from an <strong>unregistered pension plan</strong> in box <strong>016</strong>. Instead, include them in the &quot;Other information&quot; area using code 109</p>
+<dd><p id="bx016">Report the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a <strong>superannuation or registered pension fund or plan</strong> using box 016.</p>
 </dd>
 
 <dt>Disability benefits</dt>
@@ -395,6 +391,11 @@
 <dt>Veterans' benefits eligible for pension splitting</dt>
 <dd><p>Report the veterans' benefits eligible for pension splitting you paid to eligible veterans using box 016 <strong>and</strong> <a href="#cd128">code 128</a>.</p>
 <p><strong>Do not</strong> report any <strong>other veterans' benefits</strong> you paid using box 016, use <a href="#cd127">code 127</a>.</p></dd>
+
+<dt>Unregistered pension plan</dt>
+<dd><p><strong>Do not</strong> report benefits from an <strong>unregistered pension plan</strong> using box 016, use <a href="#cd109">code 109</a>.</p>
+<p>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</p>
+</dd>
 
 <dt>Indian (exempt income)</dt>
 <dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
@@ -708,8 +709,9 @@
 </li>
 
 <li class="code-num"> 
- <details >  <summary>Code 109 – Periodic payments from an unregistered plan</summary> 
-  <p id="cd109">Enter pension benefits you paid from a pension fund or plan that is not registered.</p> 
+ <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
+<p  id="cd109">Report the periodic payments from pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using code 109. </p> 
+<p><strong>Do not</strong> report this amount using box 016.</p>
  </details> 
  </li>
 <li class="code-num">
@@ -936,7 +938,7 @@
 
 <li class="code-num">
 <details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd190">Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
+<p  id="cd190">Report the lump-sum payment from pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
