--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -510,7 +510,7 @@ margin-left: 38px;
               
                 <li>Approved associations</li>
                 <li>Approved universities, colleges, and research institutes or similar institutions</li>
-                <li>Approved organizations (granting councils) that make payments to an association, institution, or corporation identified above</li>
+                <li>Approved organizations (granting councils) that make payments to an association, institution, or corporation identified below</li>
                         </ul>
 	 <p></p>
 	 <p><strong>Third-party entities</strong></p>
