add draft alert

--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -891,7 +891,8 @@ margin-left: 38px;
         <li>you must file your return from the previous calendar year</li>
       <li>you must pay any Underused Housing Tax you owe from the previous calendar year</li>
       <li>you must file an election to use the fair market value to calculate the tax you owe, or to qualify for the exemptions for primary place of residence or qualifying occupancy, along with the return</li></ul>
-     <h3>Penalties for failing to file the return on time</h3>
+     <p><mark>[TO BE AN ALERT]: The application of penalties and interest under the Underused Housing Tax Act (UHTA) for the 2022 calendar year will be waived for any late-filed Underused Housing Tax (UHT) return and for any late-paid UHT payable, provided the return  is filed or the UHT is paid by October 31, 2023.  Where a fair market value election for a residential property for the 2022 calendar year, or an election/joint election to designate a residential property for the 2022 calendar year, is filed as part of a late-filed UHT return, the CRA will allow the election provided the return is filed by October 31, 2023. In the case of a fair market value election for a residential property for the 2022 calendar year, the fair market value must be established between January 1, 2022, and April 30, 2023. </mark></p>
+<h3>Penalties for failing to file the return on time</h3>
       <p>There are significant penalties if you fail to file an&nbsp;Underused Housing Tax return when it is due. Affected owners who are individuals are subject to a minimum penalty of <span class="nowrap">$5,000</span>. Affected owners that are corporations are subject to a minimum penalty of <span class="nowrap">$10,000</span>.</p>
 
 
