--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -515,61 +515,71 @@
 			</tr>
                      </thead>
                      <tbody>
-                      <tr>
-	<td>No claim amount </td>
-	<td>No claim amount </td>
+                    <tr>
+	<th scope="col">
+Total claim amount ($) from </th>
+	<th scope="col">
+Total claim amount ($) to </th>
+	<th scope="col">
+Claim code </th> </tr> </thead>
+<tbody>
+
+<tr>
+	<td class="align-right">No claim amount </td>
+	<td class="align-right">No claim amount </td>
 	<td class="align-right">0 </td>
 </tr>
 <tr>
 	<td class="align-right">0.00 </td>
-	<td class="align-right">10,855.00 </td>
+	<td class="align-right">19,145 </td>
 	<td class="align-right">1 </td>
 </tr>
 <tr>
-	<td class="align-right">10,855.01 </td>
-	<td class="align-right">12,548.00 </td>
+	<td class="align-right">19,145.01 </td>
+	<td class="align-right">20,838.00 </td>
 	<td class="align-right">2 </td>
 </tr>
 <tr>
-	<td class="align-right">12,548.01 </td>
-	<td class="align-right">14,241.00 </td>
+	<td class="align-right">20,838.01 </td>
+	<td class="align-right">22,531.00 </td>
 	<td class="align-right">3 </td>
 </tr>
 <tr>
-	<td class="align-right">14,241.01 </td>
-	<td class="align-right">15,934.00 </td>
+	<td class="align-right">22,531.01 </td>
+	<td class="align-right">24,224.00 </td>
 	<td class="align-right">4 </td>
 </tr>
 <tr>
-	<td class="align-right">15,934.01 </td>
-	<td class="align-right">17,627.00 </td>
+	<td class="align-right">24,224.01 </td>
+	<td class="align-right">25,917.00 </td>
 	<td class="align-right">5 </td>
 </tr>
 <tr>
-	<td class="align-right">17,627.01 </td>
-	<td class="align-right">19,320.00 </td>
+	<td class="align-right">25,917.01 </td>
+	<td class="align-right">27,610.00 </td>
 	<td class="align-right">6 </td>
 </tr>
 <tr>
-	<td class="align-right">19,320.01 </td>
-	<td class="align-right">21,013.00 </td>
+	<td class="align-right">27,610.01 </td>
+	<td class="align-right">29,303.00 </td>
 	<td class="align-right">7 </td>
 </tr>
 <tr>
-	<td class="align-right">21,013.01 </td>
-	<td class="align-right">22,706.00 </td>
+	<td class="align-right">29,303.01 </td>
+	<td class="align-right">30,996.00 </td>
 	<td class="align-right">8 </td>
 </tr>
 <tr>
-	<td class="align-right">22,706.01 </td>
-	<td class="align-right">24,399.00 </td>
+	<td class="align-right">30,996.01 </td>
+	<td class="align-right">32,689.00 </td>
 	<td class="align-right">9 </td>
 </tr>
 <tr>
-	<td class="align-right">24,399.01 </td>
-	<td class="align-right">26,092.00 </td>
+	<td class="align-right">32,689.01 </td>
+	<td class="align-right">34,382.00 </td>
 	<td class="align-right">10 </td>
-</tr> 
+</tr>
+
 
                      </tbody>
                   </table>
