--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3258,26 +3258,26 @@ Claim code </th> </tr> </thead>
                            </ul>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph earns a salary of $400 per week. In September 2023, you gave him a bonus of $300. His province of employment is Manitoba. The claim code on his TD1 is "1" and TD1MB forms is "6". </p>
+<p>Joseph earns a salary of $600 per week. In September 2023, you gave him a bonus of $300. His province of employment is Alberta. The claim code on his TD1 is "1" and TD1AB forms is "6". </p>
 
 	<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $31.40 is the total income tax for Joseph's total adjusted pay rate (step 10b)</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $56.50 is the total income tax for Joseph's total adjusted pay rate (step 10b)</span> 
                               </li>
 			<li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $27.90 is the total income tax for Joseph's adjusted pay rate (step 10a)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $53.40 is the total income tax for Joseph's adjusted pay rate (step 10a)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3.50 is the result
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3.10 is the result
                                  </span></span> 
                               </li>
 			<li class="brdr-bttm">
@@ -3290,7 +3290,7 @@ Claim code </th> </tr> </thead>
 	 	<li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $182.00 is the income tax to be deducted from Joseph's bonus payment
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $161.20 is the income tax to be deducted from Joseph's bonus payment
                                  </span></span> 
                               </li>
                  <li class="brdr-bttm">
@@ -3303,7 +3303,7 @@ Claim code </th> </tr> </thead>
  			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $182.00 is the total income tax to be deducted from Joseph’s bonus payment 
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $161.20 is the total income tax to be deducted from Joseph’s bonus payment 
                                  </span></span> 
                               </li>            
                            </ul>
@@ -3517,7 +3517,7 @@ Claim code </th> </tr> </thead>
 <p>From step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
  <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits per pay period. He received a $2,500 lump-sum payment in April 2023. The lump-sum payment was determined to not be pensionable or insurable. His province of employment is Manitoba. He requested the optional calculation for tax on his lump-sum payment. His employer began the calculation by determining Joseph’s annual tax including the lump sum payment. </p>
+<p>Joseph receives a weekly salary of $500 and $50 in taxable benefits per pay period. He received a $2,500 lump-sum payment in April 2023. The lump-sum payment was determined to not be pensionable or insurable. His province of employment is New Brunswick. He requested the optional calculation for tax on his lump-sum payment. His employer began the calculation by determining Joseph’s annual tax including the lump sum payment. </p>
 <h4 class="h4">Step 1 - Calculate the annual taxable income</h4>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
@@ -3700,10 +3700,10 @@ Claim code </th> </tr> </thead>
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x"></i>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">$1,356.88 ($12,563.72 X 10.80%) is Joseph's total provincial tax credits multiplied by the lowest Manitoba tax rate for the year. $12,563.72 is the sum of:
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">$1,530.01 ($14,166.72 X 10.80%) is Joseph's total provincial tax credits multiplied by the lowest New Brunswick tax rate for the year. $14,166.72 is the sum of:
 				 <ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
-				<li>$10,855 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1</li>
+				<li>$12,458 is Joseph's total of provincial tax credit amounts reported on his provincial or territorial Form TD1</li>
 				<li>$1,242.28 ($23.89 X 52 pay periods) is Joseph's CPP contributions for the pay period multiplied by the number of pay periods in the year, to the year’s maximum annual Joseph's contribution</li>
 				<li>$466.44 ($8.97 X 52 pay periods) is Joseph's EI premiums for the pay period multiplied by the number of pay periods in the year, up to the year’s maximum annual Joseph's premiums </li>
 				
@@ -3714,7 +3714,7 @@ Claim code </th> </tr> </thead>
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,971.03 is Joseph's total provincial tax payable for the year
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $1,797.90 is Joseph's total provincial tax payable for the year
                                  </span></span> 
                               </li>
    
@@ -3732,14 +3732,14 @@ Claim code </th> </tr> </thead>
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,971.03 is Joseph's total provincial income tax you have to withhold (step 3)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $1,797.90 is Joseph's total provincial income tax you have to withhold (step 3)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,882.97 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax)
+                                 </span> <span class="mrgn-tp-0 text-muted h5"> $3,709.87 is Joseph's total annual amount you have to withhold and remit (federal and provincial income tax)
                                  </span></span> 
                               </li>
 
